--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
-.App {
+.content{
+  min-height: 580px;
+  width: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  background-color: #ffffff;
+}
+
+.title {
   text-align: center;
+  background-color: #001529;
+  color:white ;
+  font-size: 28px;
+  margin: 5px;
+  padding: 1px;
+  border: 1px black solid;
+  border-radius: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+div{
+  margin: auto;
+  padding: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.item{
+  display: flex;
+  flex-wrap: wrap;
+  border-bottom: 1px #ebebeb solid ;
+  border-top: 1px#ebebeb solid;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.item:hover{
+  background-color:#ebebeb;
+}
+
+.total{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  float: right;
+  margin: 5px;
+  font-size: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.totales{
+  margin: 0;
+  font-size: 15px;
+  text-align: right;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.imgItem{
+  width: 100px;
+  height: 100px;
 }
